fix several items not showing on screen

--- a/client/src/pages/Chat/Chat.module.css
+++ b/client/src/pages/Chat/Chat.module.css
@@ -88,6 +88,7 @@
   }
 
   .messagesColumn {
+    height: 80vh;
     padding: 10px;
   }
 
